[package]
name = "display-board-pi"
version = "0.0.1"
authors = ["Dylan Owen <dyltotheo@gmail.com>"]
description = ""
readme = "Readme.md"
license = "MPL-2.0"
homepage = "https://github.com/dylanowen/display-board-pi"
repository = "https://github.com/dylanowen/display-board-pi"
edition = "2021"

[profile.dev]
opt-level = "s"

[profile.release]
lto = true

[features]
default = ["max-physical"]
max-physical = ["rppal"]
max-simulator = ["tui", "tui-logger"]

[dependencies]
log = "0.4"
env_logger = "0.10"
lazy_static = "1.4"

# Error handling
anyhow = "1.0"

# MAX SPI communication
rppal = { version = "0.13", optional = true }
bitvec = "1.0"
embedded-graphics = "0.7"

# Async
tokio = { version = "1.22", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
async-recursion = "1.0"

# API calls
reqwest = { version = "0.11", features = ["json"] }
openssl = { version = "0.10", features = ["vendored"] } # compile openssl from source for reqwest
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# MAX Simulator
tui = { version = "0.19", optional = true }
tui-logger = { version = "0.8", optional = true }



